fixed issues visible on mobile after deployment on heroku

--- a/public/styles.css
+++ b/public/styles.css
@@ -83,10 +83,15 @@ footer {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 50px;
+  margin-bottom: 0;
+  height: 40px;
   width: 100%;
   text-align: center;
-  line-height:60px;
+  line-height:50px;
+}
+
+.footer-text {
+  font-size: 14px;
 }
 
 .col {
